@@ -1457,8 +1457,11 @@ void weed_reinit_all(void) {
     if (rte_key_valid(i+1,TRUE)) {
       if (mainw->rte&(GU641<<i)) {
         mainw->osc_block=TRUE;
-        if ((instance=key_to_instance[i][key_modes[i]])==NULL) continue;
-        last_inst=instance;
+        if ((instance=key_to_instance[i][key_modes[i]])==NULL) {
+	  mainw->osc_block=FALSE;
+	  continue;
+	}
+       last_inst=instance;
 
         // ignore video generators
         while (weed_plant_has_leaf(last_inst,"host_next_instance")) last_inst=weed_get_plantptr_value(last_inst,"host_next_instance",&error);
@@ -1714,7 +1717,7 @@ lives_filter_error_t weed_apply_instance(weed_plant_t *inst, weed_plant_t *init_
   int nmandout=0;
   int lcount=0;
   int key=-1;
-
+  
   register int i,j,k;
 
   if ((!weed_plant_has_leaf(inst,"out_channels")||(out_channels=weed_get_plantptr_array(inst,"out_channels",&error))==NULL)
@@ -1738,13 +1741,12 @@ lives_filter_error_t weed_apply_instance(weed_plant_t *inst, weed_plant_t *init_
       // run it only if it outputs into effects which have video chans
       //if (!feeds_to_video_filters(key,rte_key_getmode(key+1))) return FILTER_ERROR_NO_IN_CHANNELS;
 
-      // data processing effect; just call the process_func
-      weed_set_double_value(inst,"fps",cfile->pb_fps);
-
       // see if we can multithread
       if ((prefs->nfx_threads=future_prefs->nfx_threads)>1 &&
           filter_flags&WEED_FILTER_HINT_MAY_THREAD) {
         filter_mutex_lock(key);
+	// data processing effect; just call the process_func
+	weed_set_double_value(inst,"fps",cfile->pb_fps);
         retval=process_func_threaded(inst,out_channels,tc);
         filter_mutex_unlock(key);
         if (retval!=FILTER_ERROR_DONT_THREAD) did_thread=TRUE;
@@ -1755,6 +1757,7 @@ lives_filter_error_t weed_apply_instance(weed_plant_t *inst, weed_plant_t *init_
         weed_leaf_get(filter,"process_func",0,(void *)&process_func_ptr_ptr);
         process_func=process_func_ptr_ptr[0];
         filter_mutex_lock(key);
+	weed_set_double_value(inst,"fps",cfile->pb_fps);
         ret=(*process_func)(inst,tc);
         filter_mutex_unlock(key);
         if (ret==WEED_ERROR_PLUGIN_INVALID) retval=FILTER_ERROR_MUST_RELOAD;
@@ -3603,7 +3606,10 @@ weed_plant_t *weed_apply_effects(weed_plant_t **layers, weed_plant_t *filter_map
         }
         if (mainw->rte&(GU641<<i)) {
           mainw->osc_block=TRUE;
-          if ((instance=key_to_instance[i][key_modes[i]])==NULL) continue;
+          if ((instance=key_to_instance[i][key_modes[i]])==NULL) {
+	    mainw->osc_block=FALSE;
+	    continue;
+	  }
           if (mainw->pchains!=NULL&&mainw->pchains[i]!=NULL) {
             interpolate_params(instance,mainw->pchains[i],tc); // interpolate parameters during preview
           }
@@ -3777,21 +3783,26 @@ void weed_apply_audio_effects_rt(float **abuf, int nchans, int64_t nsamps, doubl
         mainw->osc_block=TRUE;
 
         // filter must not be deinited until we have processed it
-        if (pthread_mutex_trylock(&mainw->data_mutex[i])) continue;
-
+        if (pthread_mutex_trylock(&mainw->data_mutex[i])) {
+	  mainw->osc_block=FALSE;
+	  continue;
+	}
         if ((instance=key_to_instance[i][key_modes[i]])==NULL) {
           filter_mutex_unlock(i);
+	  mainw->osc_block=FALSE;
           continue;
         }
         filter=weed_instance_get_filter(instance,FALSE);
 
         if (!has_audio_chans_in(filter,FALSE)||has_video_chans_in(filter,FALSE)||has_video_chans_out(filter,FALSE)) {
           filter_mutex_unlock(i);
+	  mainw->osc_block=FALSE;
           continue;
         }
 
         if (analysers_only&&has_audio_chans_out(filter,FALSE)) {
           filter_mutex_unlock(i);
+	  mainw->osc_block=FALSE;
           continue;
         }
 
@@ -3810,6 +3821,7 @@ apply_audio_inst2:
             // if anything is connected to ACTIVATE, the fx may be deactivated
             if ((instance=key_to_instance[i][key_modes[i]])==NULL) {
               filter_mutex_unlock(i);
+	      mainw->osc_block=FALSE;
               continue;
             }
 
@@ -3849,7 +3861,11 @@ apply_audio_inst2:
 #ifdef DEBUG_RTE
         if (filter_error!=FILTER_NO_ERROR) lives_printerr("Render error was %d\n",filter_error);
 #endif
+	mainw->osc_block=FALSE;
+
+
       }
+
     }
   }
 
@@ -7658,13 +7674,19 @@ deinit4:
 
   if (bg_gen_to_start!=-1) {
 
-    if (mainw->blend_file==-1) return TRUE; // for example if transition was swapped for filter in mapper
+    if (mainw->blend_file==-1) {
+      mainw->osc_block=FALSE;
+      return TRUE; // for example if transition was swapped for filter in mapper
+    }
 
     // check is still gen
     if (enabled_in_channels(weed_filters[key_to_fx[bg_gen_to_start][key_modes[bg_gen_to_start]]],FALSE)==0) {
       if (key_to_instance[bg_gen_to_start][key_modes[bg_gen_to_start]]==NULL) {
         // restart bg generator
-        if (!weed_init_effect(bg_gen_to_start)) return TRUE;
+        if (!weed_init_effect(bg_gen_to_start)) {
+	  mainw->osc_block=FALSE;
+	  return TRUE;
+	}
         was_started=TRUE;
       }
       inst=key_to_instance[bgs][key_modes[bgs]];
