@@ -5,7 +5,9 @@ Minor fixes for headless (nogui, noplaywin) modes.
 Increase size of debug output window when encoding (Regression).
 Fix for compiling without jack.
 Fix crash in mask_overlay effect.
-
+Fix some threading problems when running audio and video effects together.
+Improve OSC responsiveness during playback.
+Fixes for beat_detector and scribbler plugins.
 
 
 
